--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,9 @@ body {
   background-color: #151515;
 }
 
+.navbar {
+  background-color: #151515;
+}
 
 #root h1 {
   color: aliceblue
@@ -87,13 +90,13 @@ section {
 .card-category {
   position: relative;
   height: 10rem;
+  border: none;
   z-index: 1;
 }
 
 
 .card-category:hover {
   cursor: pointer;
-  background-color: rgba(13, 11, 44, 80%);
 }
 
 .card-category::after {
@@ -102,7 +105,7 @@ section {
   height: 100%;
   position: absolute;
   border-radius: 0.376rem;
-  background-color: rgba(13, 11, 44, 50%);
+  background-color: rgba(0, 0, 0, 69%);
   inset: 0;
   z-index: -99999;
 }
@@ -144,6 +147,8 @@ section {
 /* Set the background image */
 .details {
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: azure;
   width: 100%;
   position: relative;
@@ -158,7 +163,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgb(0 0 0 / 91%), rgb(16 42 139 / 62%));
+  background-image: linear-gradient(rgb(0 0 0 / 91%), rgba(3, 8, 26, 0.904));
   opacity: 0.5;
   z-index: -1;
 }
