--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -168,3 +168,35 @@ section {
   color: var(--primary-color);
   font-weight: bolder;
 }
+
+/* Sign Up / Login Header Details */
+li.account__data:hover {
+  background-color: var(--primary-color);
+  border-radius: 0.434rem;
+}
+.account__data > * {
+  font-weight: bold;
+  font-size: 12px;
+  color: var(--primary-color);
+}
+.account__data a:hover {
+  color: azure;
+}
+
+li.nav-item:hover {
+  background-color: var(--primary-color);
+  border-radius: 0.25rem;
+}
+
+.nav-item a:hover {
+  color: azure;
+}
+
+.active {
+  background-color: var(--primary-color);
+  border-radius: 0.25rem;
+}
+
+.navbar-brand {
+  font-size: 2.5rem;
+}
