--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -176,6 +176,7 @@ li.account__data:hover {
 }
 .account__data > * {
   font-weight: bold;
+  text-decoration: none;
   font-size: 12px;
   color: var(--primary-color);
 }
@@ -187,7 +188,20 @@ li.nav-item:hover {
   background-color: var(--primary-color);
   border-radius: 0.25rem;
 }
-
+span.welcome {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+}
+a.profile {
+  text-decoration: none;
+  color: var(--primary-color);
+  font-size: 13px;
+}
+a.profile:hover {
+  color: white;
+}
 .nav-item a:hover {
   color: azure;
 }
