--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 
 body {
   background-color: #151515;
-  background-image: url('./assets/black.jpg');
+  background-image: url("./assets/black.jpg");
   overflow-x: hidden;
 }
 
@@ -190,6 +190,20 @@ li.nav-item:hover {
   background-color: var(--primary-color);
   border-radius: 0.25rem;
 }
+
+.nav-item a:hover {
+  color: azure;
+}
+
+.active {
+  background-color: var(--primary-color);
+  border-radius: 0.25rem;
+}
+
+.navbar-brand {
+  font-size: 2.5rem;
+}
+
 span.welcome {
   font-weight: bold;
   text-decoration: none;
@@ -204,16 +218,4 @@ a.profile {
 }
 a.profile:hover {
   color: white;
-}
-.nav-item a:hover {
-  color: azure;
-}
-
-.active {
-  background-color: var(--primary-color);
-  border-radius: 0.25rem;
-}
-
-.navbar-brand {
-  font-size: 2.5rem;
 }
