Add Collection List

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,6 @@
 
 body {
   background-color: #151515;
-  background-image: url("./assets/black.jpg");
   overflow-x: hidden;
 }
 
@@ -91,9 +90,7 @@ section {
 
 .card-category {
   position: relative;
-  height: 10rem;
   border: none;
-
   z-index: 1;
 }
 
@@ -176,12 +173,14 @@ li.account__data:hover {
   background-color: var(--primary-color);
   border-radius: 0.434rem;
 }
-.account__data > * {
+
+.account__data>* {
   font-weight: bold;
   text-decoration: none;
   font-size: 12px;
   color: var(--primary-color);
 }
+
 .account__data a:hover {
   color: azure;
 }
@@ -210,12 +209,50 @@ span.welcome {
   color: white;
   font-size: 12px;
 }
+
 a.profile {
   text-decoration: none;
   color: var(--primary-color);
   text-transform: capitalize;
   font-size: 13px;
 }
+
 a.profile:hover {
   color: white;
+}
+
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 100vh;
+  background-color: #01060c;
+  transition: transform 0.3s ease;
+  z-index: 1000;
+}
+
+.sidebar.show {
+  transform: translateX(0);
+}
+
+.sidebar.hide {
+  transform: translateX(-250px);
+}
+
+/* Content */
+.content {
+  margin-left: 250px;
+  padding: 20px;
+  transition: margin-left 0.3s ease;
+}
+
+.normal__link{
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+.normal__link:hover{
+  color: wheat;
 }
